# jenkins-ai-optimizer

./: .cursorignore  .env.example  CHANGELOG.md  CLAUDE-DESKTOP-COMMANDS.md  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile  ENV-SETUP.md  GETTING-STARTED.md  HOW-TO-ACCESS-CLAUDE-DESKTOP.md  LICENSE  MONITORING-AND-ACCESS.md  PYPI_PUBLISHING.md  QUICK-REFERENCE.md  README-Docker.md  README.md  RELEASE-CHECKLIST.md  TOKEN-SETUP-SUMMARY.md  docker-compose.yml  inspector-config.json  mcpconfig.docker.json  pyproject.toml  pytest.ini  requirements.txt  start-jenkins.sh
.github/workflows/: publish-github.yml  publish.yml
config/: README-diagnostic-config.md  README.md  config.example.json  config.example.yaml  diagnostic-parameters-guide.md  diagnostic-parameters-quick-reference.md  mcp-config.example.yml
jenkins_mcp_enterprise/: base.py  config.py  multi_jenkins_manager.py
jenkins_mcp_enterprise/tools/: subbuilds.py
scripts/: claude_desktop_proxy.py  mcp_http_proxy.py  run_ci_locally.sh  run_integration_tests.py  start_dev_environment.sh  test_http_streaming.py  validate_diagnostic_config.py
tests/: __init__.py
tests/mcp_integration/: __init__.py  mcp_test_client.py  test_doubles.py  test_error_scenarios.py  test_infrastructure.py  test_performance.py  test_simple_validation.py  test_tool_scenarios.py
